--- a/views/home.html
+++ b/views/home.html
@@ -1,38 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer documento en HTML</title>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
     <h4>Soy un h4</h4>
     <h1>El titulo de nuestro documento</h1>
     <h2>Un subtitulo cualquiera</h2>
-    
+
     <img src="/images/TJ2RO4H57T4UHPY524EZSGUJG4.jpg" alt="">
 
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-        Cumque, corporis nam. A harum ab veritatis rerum quam eligendi quasi tempora accusantium exercitationem, 
-        at dolore reprehenderit iure ad, veniam eveniet eum.</p>
-    
+    <strong>otro texto en negrita</strong>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima illo, quos quis magnam cumque, 
+    <p>Lorem ipsum dolor <strong>esto es un texto en negrita</strong>, amet consectetur adipisicing elit.
+        Cumque, corporis nam. A harum ab veritatis <em>soy un texto en cursiva</em> rerum quam eligendi quasi tempora accusantium exercitationem,
+        at dolore reprehenderit iure ad, veniam eveniet eum.</p>
+
+
+    <p class= "parrafo-destacado">Lorem ipsum dolor <em>soy un texto en cursiva</em> amet consectetur adipisicing elit. Minima illo, quos quis magnam cumque,
         mollitia illum similique saepe tempore aut ut magni nostrum harum. Omnis ut facere totam quaerat est.</p>
 
-        <ol>
+    <ol>
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
     </ol>
 
-        <ul>
+    <ul>
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
-        </ul>
+    </ul>
 
-        <a href="https://www.google.com">Ir a Google</a>
-    </body>
+    <a href="https://www.google.com">Ir a Google</a>
+</body>
+
 </html>
